k8s-cls/namespace.yaml
apiVersion: 'v1'
kind: 'Namespace'
metadata:
  name: 'customers-ns'
  labels:
    app.kubernetes.io/name: 'customers-system'
    environment: 'assignment'
