k8s-cls/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-api
  namespace: customers-ns
  labels:
    app: customers-api
    tier: api
    version: v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: customers-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: customers-api
        tier: api
        version: v1
    spec:
      containers:
        - name: customers-api
          image: 'gurmeetsinghchauhan/customers-api:v1'
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 5
