k8s-cls/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-api-service
  namespace: customers-ns
  labels:
    app: customers-api
    tier: api
spec:
  selector:
    app: customers-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
