k8s-cls/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: customers-ns
  labels:
    app: postgres
    tier: database
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
