k8s-cls/ingress.yaml
apiVersion: 'networking.k8s.io/v1'
kind: 'Ingress'
metadata:
  name: 'customers-ingress'
  namespace: 'customers-ns'
  labels:
    app: 'customers-api'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: '/'
spec:
  ingressClassName: 'nginx'
  rules:
    - http:
        paths:
          - path: '/'
            pathType: 'Prefix'
            backend:
              service:
                name: 'customers-api-service'
                port:
                  number: 80
